y.output
Non-terminaux inutiles dans la grammaire

   DefinitionConst
   DefinitionNC


Terminaux inutilisés dans la grammaire

   tEQ
   tCONST
   tIF
   tELSE


Règles inutiles dans la grammaire

   22 DefinitionConst: tCONST tINT tID DefinitionNC tPV
   23                | tCONST tINT tID tEGAL Expression tPV

   24 DefinitionNC: %empty
   25             | tVR tID DefinitionNC


Grammaire

    0 $accept: File $end

    1 File: Main

    2 $@1: %empty

    3 Main: tMAIN $@1 tPO tPF tAO Body tAF

    4 Body: %empty
    5     | Definition Body
    6     | Affectation Body
    7     | Fonction Body

    8 Definition: tINT tID DefinitionN tPV
    9           | tINT tID tEGAL Expression tPV

   10 DefinitionN: %empty

   11 $@2: %empty

   12 DefinitionN: tVR tID $@2 DefinitionN

   13 Affectation: tID tEGAL Expression tPV

   14 Expression: tID
   15           | tNB
   16           | tPO Expression tPF
   17           | Expression tPLUS Expression
   18           | Expression tMOINS Expression
   19           | Expression tDIV Expression
   20           | Expression tFOIS Expression

   21 Fonction: tPRINTF tPO tID tPF tPV


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tMAIN (258) 3
tINT (259) 8 9
tEQ (260)
tPO (261) 3 16 21
tPF (262) 3 16 21
tAO (263) 3
tAF (264) 3
tPV (265) 8 9 13 21
tVR (266) 12
tPLUS (267) 17
tMOINS (268) 18
tDIV (269) 19
tFOIS (270) 20
tPRINTF (271) 21
tEGAL (272) 9 13
tCONST (273)
tIF (274)
tELSE (275)
tNB (276) 15
tID (277) 8 9 12 13 14 21


Non-terminaux, suivis des règles où ils apparaissent

$accept (23)
    à gauche: 0
File (24)
    à gauche: 1, à droite: 0
Main (25)
    à gauche: 3, à droite: 1
$@1 (26)
    à gauche: 2, à droite: 3
Body (27)
    à gauche: 4 5 6 7, à droite: 3 5 6 7
Definition (28)
    à gauche: 8 9, à droite: 5
DefinitionN (29)
    à gauche: 10 12, à droite: 8 12
$@2 (30)
    à gauche: 11, à droite: 12
Affectation (31)
    à gauche: 13, à droite: 6
Expression (32)
    à gauche: 14 15 16 17 18 19 20, à droite: 9 13 16 17 18 19 20
Fonction (33)
    à gauche: 21, à droite: 7


État 0

    0 $accept: . File $end

    tMAIN  décalage et aller à l'état 1

    File  aller à l'état 2
    Main  aller à l'état 3


État 1

    3 Main: tMAIN . $@1 tPO tPF tAO Body tAF

    $défaut  réduction par utilisation de la règle 2 ($@1)

    $@1  aller à l'état 4


État 2

    0 $accept: File . $end

    $end  décalage et aller à l'état 5


État 3

    1 File: Main .

    $défaut  réduction par utilisation de la règle 1 (File)


État 4

    3 Main: tMAIN $@1 . tPO tPF tAO Body tAF

    tPO  décalage et aller à l'état 6


État 5

    0 $accept: File $end .

    $défaut  accepter


État 6

    3 Main: tMAIN $@1 tPO . tPF tAO Body tAF

    tPF  décalage et aller à l'état 7


État 7

    3 Main: tMAIN $@1 tPO tPF . tAO Body tAF

    tAO  décalage et aller à l'état 8


État 8

    3 Main: tMAIN $@1 tPO tPF tAO . Body tAF

    tINT     décalage et aller à l'état 9
    tPRINTF  décalage et aller à l'état 10
    tID      décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 4 (Body)

    Body         aller à l'état 12
    Definition   aller à l'état 13
    Affectation  aller à l'état 14
    Fonction     aller à l'état 15


État 9

    8 Definition: tINT . tID DefinitionN tPV
    9           | tINT . tID tEGAL Expression tPV

    tID  décalage et aller à l'état 16


État 10

   21 Fonction: tPRINTF . tPO tID tPF tPV

    tPO  décalage et aller à l'état 17


État 11

   13 Affectation: tID . tEGAL Expression tPV

    tEGAL  décalage et aller à l'état 18


État 12

    3 Main: tMAIN $@1 tPO tPF tAO Body . tAF

    tAF  décalage et aller à l'état 19


État 13

    5 Body: Definition . Body

    tINT     décalage et aller à l'état 9
    tPRINTF  décalage et aller à l'état 10
    tID      décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 4 (Body)

    Body         aller à l'état 20
    Definition   aller à l'état 13
    Affectation  aller à l'état 14
    Fonction     aller à l'état 15


État 14

    6 Body: Affectation . Body

    tINT     décalage et aller à l'état 9
    tPRINTF  décalage et aller à l'état 10
    tID      décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 4 (Body)

    Body         aller à l'état 21
    Definition   aller à l'état 13
    Affectation  aller à l'état 14
    Fonction     aller à l'état 15


État 15

    7 Body: Fonction . Body

    tINT     décalage et aller à l'état 9
    tPRINTF  décalage et aller à l'état 10
    tID      décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 4 (Body)

    Body         aller à l'état 22
    Definition   aller à l'état 13
    Affectation  aller à l'état 14
    Fonction     aller à l'état 15


État 16

    8 Definition: tINT tID . DefinitionN tPV
    9           | tINT tID . tEGAL Expression tPV

    tVR    décalage et aller à l'état 23
    tEGAL  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 10 (DefinitionN)

    DefinitionN  aller à l'état 25


État 17

   21 Fonction: tPRINTF tPO . tID tPF tPV

    tID  décalage et aller à l'état 26


État 18

   13 Affectation: tID tEGAL . Expression tPV

    tPO  décalage et aller à l'état 27
    tNB  décalage et aller à l'état 28
    tID  décalage et aller à l'état 29

    Expression  aller à l'état 30


État 19

    3 Main: tMAIN $@1 tPO tPF tAO Body tAF .

    $défaut  réduction par utilisation de la règle 3 (Main)


État 20

    5 Body: Definition Body .

    $défaut  réduction par utilisation de la règle 5 (Body)


État 21

    6 Body: Affectation Body .

    $défaut  réduction par utilisation de la règle 6 (Body)


État 22

    7 Body: Fonction Body .

    $défaut  réduction par utilisation de la règle 7 (Body)


État 23

   12 DefinitionN: tVR . tID $@2 DefinitionN

    tID  décalage et aller à l'état 31


État 24

    9 Definition: tINT tID tEGAL . Expression tPV

    tPO  décalage et aller à l'état 27
    tNB  décalage et aller à l'état 28
    tID  décalage et aller à l'état 29

    Expression  aller à l'état 32


État 25

    8 Definition: tINT tID DefinitionN . tPV

    tPV  décalage et aller à l'état 33


État 26

   21 Fonction: tPRINTF tPO tID . tPF tPV

    tPF  décalage et aller à l'état 34


État 27

   16 Expression: tPO . Expression tPF

    tPO  décalage et aller à l'état 27
    tNB  décalage et aller à l'état 28
    tID  décalage et aller à l'état 29

    Expression  aller à l'état 35


État 28

   15 Expression: tNB .

    $défaut  réduction par utilisation de la règle 15 (Expression)


État 29

   14 Expression: tID .

    $défaut  réduction par utilisation de la règle 14 (Expression)


État 30

   13 Affectation: tID tEGAL Expression . tPV
   17 Expression: Expression . tPLUS Expression
   18           | Expression . tMOINS Expression
   19           | Expression . tDIV Expression
   20           | Expression . tFOIS Expression

    tPV     décalage et aller à l'état 36
    tPLUS   décalage et aller à l'état 37
    tMOINS  décalage et aller à l'état 38
    tDIV    décalage et aller à l'état 39
    tFOIS   décalage et aller à l'état 40


État 31

   12 DefinitionN: tVR tID . $@2 DefinitionN

    $défaut  réduction par utilisation de la règle 11 ($@2)

    $@2  aller à l'état 41


État 32

    9 Definition: tINT tID tEGAL Expression . tPV
   17 Expression: Expression . tPLUS Expression
   18           | Expression . tMOINS Expression
   19           | Expression . tDIV Expression
   20           | Expression . tFOIS Expression

    tPV     décalage et aller à l'état 42
    tPLUS   décalage et aller à l'état 37
    tMOINS  décalage et aller à l'état 38
    tDIV    décalage et aller à l'état 39
    tFOIS   décalage et aller à l'état 40


État 33

    8 Definition: tINT tID DefinitionN tPV .

    $défaut  réduction par utilisation de la règle 8 (Definition)


État 34

   21 Fonction: tPRINTF tPO tID tPF . tPV

    tPV  décalage et aller à l'état 43


État 35

   16 Expression: tPO Expression . tPF
   17           | Expression . tPLUS Expression
   18           | Expression . tMOINS Expression
   19           | Expression . tDIV Expression
   20           | Expression . tFOIS Expression

    tPF     décalage et aller à l'état 44
    tPLUS   décalage et aller à l'état 37
    tMOINS  décalage et aller à l'état 38
    tDIV    décalage et aller à l'état 39
    tFOIS   décalage et aller à l'état 40


État 36

   13 Affectation: tID tEGAL Expression tPV .

    $défaut  réduction par utilisation de la règle 13 (Affectation)


État 37

   17 Expression: Expression tPLUS . Expression

    tPO  décalage et aller à l'état 27
    tNB  décalage et aller à l'état 28
    tID  décalage et aller à l'état 29

    Expression  aller à l'état 45


État 38

   18 Expression: Expression tMOINS . Expression

    tPO  décalage et aller à l'état 27
    tNB  décalage et aller à l'état 28
    tID  décalage et aller à l'état 29

    Expression  aller à l'état 46


État 39

   19 Expression: Expression tDIV . Expression

    tPO  décalage et aller à l'état 27
    tNB  décalage et aller à l'état 28
    tID  décalage et aller à l'état 29

    Expression  aller à l'état 47


État 40

   20 Expression: Expression tFOIS . Expression

    tPO  décalage et aller à l'état 27
    tNB  décalage et aller à l'état 28
    tID  décalage et aller à l'état 29

    Expression  aller à l'état 48


État 41

   12 DefinitionN: tVR tID $@2 . DefinitionN

    tVR  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 10 (DefinitionN)

    DefinitionN  aller à l'état 49


État 42

    9 Definition: tINT tID tEGAL Expression tPV .

    $défaut  réduction par utilisation de la règle 9 (Definition)


État 43

   21 Fonction: tPRINTF tPO tID tPF tPV .

    $défaut  réduction par utilisation de la règle 21 (Fonction)


État 44

   16 Expression: tPO Expression tPF .

    $défaut  réduction par utilisation de la règle 16 (Expression)


État 45

   17 Expression: Expression . tPLUS Expression
   17           | Expression tPLUS Expression .
   18           | Expression . tMOINS Expression
   19           | Expression . tDIV Expression
   20           | Expression . tFOIS Expression

    tDIV   décalage et aller à l'état 39
    tFOIS  décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 17 (Expression)


État 46

   17 Expression: Expression . tPLUS Expression
   18           | Expression . tMOINS Expression
   18           | Expression tMOINS Expression .
   19           | Expression . tDIV Expression
   20           | Expression . tFOIS Expression

    tDIV   décalage et aller à l'état 39
    tFOIS  décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 18 (Expression)


État 47

   17 Expression: Expression . tPLUS Expression
   18           | Expression . tMOINS Expression
   19           | Expression . tDIV Expression
   19           | Expression tDIV Expression .
   20           | Expression . tFOIS Expression

    $défaut  réduction par utilisation de la règle 19 (Expression)


État 48

   17 Expression: Expression . tPLUS Expression
   18           | Expression . tMOINS Expression
   19           | Expression . tDIV Expression
   20           | Expression . tFOIS Expression
   20           | Expression tFOIS Expression .

    $défaut  réduction par utilisation de la règle 20 (Expression)


État 49

   12 DefinitionN: tVR tID $@2 DefinitionN .

    $défaut  réduction par utilisation de la règle 12 (DefinitionN)
